fixed some spacing

--- a/unit1/self-portrait/style.css
+++ b/unit1/self-portrait/style.css
@@ -139,7 +139,7 @@ UC timeline.
   position: absolute;
   z-index: 1;
   top:1%;
-  left:48%;
+  left:55%;
   background-position-x: 90%;  
 }
 
@@ -158,7 +158,7 @@ The Gundam in the serise is named Gundam GP01 "Zephyranthes"
   position: absolute;
   z-index: 1;
   top:1%;
-  left:58%;  
+  left:68%;  
 }
 
 h2 {
